--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
         canvas.addEventListener('pointerup', () => {
             drawing = false;
         });
+        canvas.addEventListener('pointerleave', () => {
+            drawing = false;
+        });
         
         function clearSignature() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
